# cub3d

./: .gitignore  CMakeLists.txt  Makefile  Makefile_Andruha  addition_fun.c  cub.c  cub3d.h  cub_utils.c  draw.c  draw_get_textures.c  draw_post_dda.c  draw_pre_dda.c  draw_sprites.c  draw_sprites_utils.c  for_move.c  initial.c  initial_mlx.c  intial_mlx.c  map_1.cub  map_anal.c  map_parse.c  map_parse_add.c  move.c  my_pixel.c  params_parse.c  params_parse_add.c  parse_map.c  parse_map_add.c  parse_params.c  parse_params_add.c  parse_paths.c  paths_parse.c  screenshot.c  wter
gnl_cub3d/: get_next_line.c  get_next_line.h  get_next_line_utils.c
libft_cub3d/: Makefile  ft_atoi.c  libft.h
minilibx/: mlx.h.gch
mlx/: mlx.c  run.sh
textures/: ah.xpm  ea.xpm  night_sky_wall.xpm  no.xpm  obj.xpm  obj_pillar.xpm  os.xpm  sky_wall.xpm  so.xpm  we.xpm
